--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "@types/node": "^12.20.24",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "i18next": "^20.6.1",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.12.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.4.2",
     "web-vitals": "^1.1.2"
