--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-<<<<<<< HEAD
-.firebase/hosting.YnVpbGQ.cache
-.firebaserc
-firebase.json
-=======
->>>>>>> f2d3fee (Initialize project using Create React App)
+.firebase
